--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-streamlit
-pandas
+python = ">=3.10"
+obspy = "*"
+scipy = "*"
+matplotlib = "*"
+pandas = "*"
+numpy = "*"
+pyproj = "*"
+plotly = "*"
+nbformat = "*"
+streamlit = "1.34"
+sprit = "*"
