--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-python = ">=3.10"
-obspy = "*"
-scipy = "*"
-matplotlib = "*"
-pandas = "*"
-numpy = "*"
-pyproj = "*"
-plotly = "*"
-nbformat = "*"
-streamlit = "1.34"
-sprit = "*"
+obspy
+scipy
+matplotlib
+pandas
+numpy
+pyproj
+plotly
+nbformat
+streamlit
+sprit
